[project]
name = "agent-tutorials"
version = "0.1.0"
description = ""
authors = [
    {name = "NIKHIL KUMAR REDDY",email = "nikhilkumar.m@skil.ai"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain-openai (>=0.3.28,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-core (>=0.3.69,<0.4.0)",
    "requests (>=2.32.4,<3.0.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "ddgs (>=9.3.1,<10.0.0)",
    "autogen-agentchat (>=0.6.4,<0.7.0)",
    "autogen-ext[openai] (>=0.6.4,<0.7.0)",
    "arxiv (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
